# bb-remote-execution

./: WORKSPACE
cmd/bb_scheduler/: BUILD.bazel  main.go
cmd/bb_worker/: BUILD.bazel  main.go
pkg/builder/: BUILD.bazel  worker_build_queue.go
pkg/configuration/bb_scheduler/: configuration.go
pkg/configuration/bb_worker/: configuration.go
pkg/proto/configuration/bb_scheduler/: bb_scheduler.proto
pkg/proto/configuration/bb_worker/: bb_worker.proto
pkg/proto/worker/: BUILD.bazel  remote_worker.proto
pkg/store/: BUILD.bazel  etcd.go  etcd_priority_queue.go  interfaces.go  memory.go  worker_build_job.go
pkg/worker/: BUILD.bazel  bot.go
