load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "etcd.go",
        "etcd_priority_queue.go",
        "interfaces.go",
        "memory.go",
        "worker_build_job.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:go_default_library",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_etcd_go_etcd//clientv3:go_default_library",
        "@io_etcd_go_etcd//clientv3/namespace:go_default_library",
        "@io_etcd_go_etcd//contrib/recipes:go_default_library",
        "@io_etcd_go_etcd//mvcc/mvccpb:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
