load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "worker_proto",
    srcs = ["remote_worker.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remoteexecution_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "worker_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/proto/worker",
    proto = ":worker_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":worker_go_proto"],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/proto/worker",
    visibility = ["//visibility:public"],
)
